--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
   font-family: sans-serif;
   text-align: center;
 }
+.card {
+  width: 370px;
+  border-radius: 8px;
+}
+.card img {
+  width: 100%;
+}
