--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,14 @@
   font-family: sans-serif;
   text-align: center;
 }
+header {
+  margin-top: 0;
+  left: 0;
+  background: black;
+  padding: 1em;
+}
 .card {
-  width: 370px;
+  width: 300px;
   background: black;
   border-radius: 8px;
   clip-path: polygon(
@@ -23,6 +29,10 @@
 }
 .card-text {
   padding: 15px;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
+}
+.logo {
+  position: absolute;
+  margin-left: 40%;
+  margin-right: 40%;
+  transform: translate(50%, -50%);
 }
